--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,336 @@
-.App {
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  height: 100vh;
+  font-family: "Karla", sans-serif;
+  color: #333333;
+}
+
+button {
+  font-family: "Karla", sans-serif !important;
+}
+
+.title {
+  display: block;
+  font-family: "Markazi Text", serif;
+}
+
+.font-40 {
+  font-size: 40pt;
+}
+
+.font-20 {
+  font-size: 18pt;
+}
+
+.color-yellow {
+  color: #f4ce14;
+}
+
+.color-white {
+  color: #ffffff;
+}
+
+header {
+  display: grid;
+  grid-template-columns: 20% 80%;
+  align-items: center;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+
+nav ul {
+  display: grid;
+  grid-template-columns: repeat(6, auto);
+  list-style-type: none;
+  justify-content: end;
+  grid-gap: 2rem;
+}
+
+nav ul li {
+  text-decoration: none;
+}
+
+nav li a {
+  text-decoration: none;
+  color: black;
+}
+
+nav li a:hover {
+  font-weight: 600;
+}
+
+.logo {
+  height: 50px;
+}
+
+.banner {
+  background-color: #495e57;
+  height: 25rem;
+  margin-bottom: 3rem;
+}
+
+.banner-content {
+  display: grid;
+  grid-template-columns: 60% 40%;
+}
+
+.banner-content article {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+
+.gutter {
+  padding-left: 5rem;
+  padding-right: 5rem;
+}
+
+.banner-description {
+  padding-top: 5%;
+  padding-bottom: 5%;
+  inline-size: 18rem;
+}
+
+.banner-image {
+  background-image: url("images/restauranfood.jpg");
+  background-size: cover;
+  border-radius: 1rem;
+  height: 22rem;
+}
+
+.btn-yellow {
+  background-color: #f4ce14;
+  border-radius: 10pt;
+  font-size: 14pt;
+  font-weight: 500;
+  border: none;
+  padding: 1rem 2rem 1rem 2rem;
+}
+
+.btn-yellow:hover {
+  background-color: #ee9972;
+  color: #edefee;
+  cursor: pointer;
+}
+
+.specials-section {
+  margin-bottom: 3rem;
+}
+
+.specials-header {
+  display: grid;
+  grid-template-columns: 3fr 1fr;
+  justify-content: space-between;
+  margin-bottom: 2rem;
+}
+
+.specials {
+  display: grid;
+  grid-template-columns: repeat(3, 30%);
+  grid-gap: 4rem;
+}
+
+.card-image {
+  width: 100%;
+  height: 12rem;
+  border-top-right-radius: 1rem;
+  border-top-left-radius: 1rem;
+}
+
+.card-body {
+  padding: 2rem;
+  background-color: #edefee;
+  border-bottom-right-radius: 1rem;
+  border-bottom-left-radius: 1rem;
+  margin-top: -5px;
+}
+
+.card-body div:nth-child(1) {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+
+.card-body div:nth-child(1) span:nth-child(1) {
+  font-size: 18pt;
+}
+
+.card-body div:nth-child(1) span:nth-child(2) {
+  font-size: 16pt;
+  color: #ee9972;
+  font-weight: 500;
+}
+
+.card-body p:nth-child(2) {
+  font-size: 16pt;
+  line-height: 1.5;
+  max-width: 65ch;
+}
+
+.card-body span:nth-child(3) {
+  display: block;
+  font-size: 18pt;
+  font-weight: 500;
+  margin-top: 2rem;
+}
+
+footer {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  background-color: #495e57;
+  color: #edefee;
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+  margin-top: 2rem;
+}
+
+footer ul {
+  list-style-type: none;
+}
+
+footer ul li {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+
+footer ul li a {
+  color: #edefee;
+  text-decoration: none;
+}
+
+footer ul li:nth-child(1) {
+  font-weight: 600;
+}
+
+.cta {
+  text-decoration: none;
+  color: inherit;
+}
+
+form div {
+  margin-bottom: 1rem;
+}
+
+.error {
+  display: block;
+  color: red;
+}
+
+label {
+  display: block;
+  margin-bottom: 0.5rem;
+}
+
+.form-control {
+  font-size: 14px;
+  padding: 10px;
+  width: 100%;
+  margin-bottom: 0.5rem;
+  border: 1px solid #333333;
+  border-radius: 0.5rem;
+}
+
+.booking-page {
+  display: grid;
+  grid-template-columns: 50%;
+  align-items: center;
+  justify-content: center;
+}
+
+.booking-confirmation {
+  justify-content: center;
+  display: flex;
+  top: 0;
+  height: 100dvh;
+  align-items: center;
+}
+
+.title-center {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.testimonials {
+  display: grid;
+  grid-template-columns: repeat(3, 30%);
+  grid-gap: 4rem;
+  margin-bottom: 3rem;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+.testimonial-card {
+  display: grid;
+  grid-template-columns: 6rem 1fr;
+  grid-template-rows: 2rem 1fr;
+  gap: 0px 0px;
+  grid-template-areas:
+    "rating rating"
+    "image description";
+  padding: 1rem;
+}
+.rating {
+  grid-area: rating;
+}
+.image {
+  grid-area: image;
+}
+.description {
+  grid-area: description;
+}
+
+.testimonial-card img {
+  width: 5rem;
+  height: 5rem;
+  border-radius: 1rem;
+}
+
+.reservation-card{
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  background-color: #edefee;
+  padding: 1rem;
+  margin-bottom: 1rem;
+}
+
+@media (max-width: 900px) {
+  .specials,
+  .testimonials {
+    grid-template-columns: 1fr;
   }
-}
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  .booking-page,
+  footer {
+    grid-template-columns: 1fr;
   }
-  to {
-    transform: rotate(360deg);
+
+  footer {
+    text-align: center;
+  }
+
+  .banner-content {
+    grid-template-columns: 1fr;
+  }
+
+  .banner-description {
+    width: 100%;
+  }
+
+  .banner-image {
+    display: none;
+  }
+
+  header {
+    grid-template-columns: 1fr;
+    grid-template-rows: 5rem 1fr;
+    text-align: center;
+  }
+
+  nav ul {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr;
   }
 }
